# image_magick_q16_hdri

./: README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/image_magick_q16_hdri_example/: MainActivity.kt
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: image_magick_q16_hdri.dart  image_magick_q16_hdri_bindings_generated.dart
lib/src/: affine_matrix.dart  channel_features.dart  channel_statistics.dart  drawing_wand.dart  drawing_wand_helpers.dart  kernel_info.dart  magick_compute.dart  magick_enums.dart  magick_global_methods.dart  magick_wand.dart  magick_wand_helpers.dart  pixel_info.dart  pixel_iterator.dart  pixel_iterator_helpers.dart  pixel_wand.dart  pixel_wand_helpers.dart  point_info.dart  segment_info.dart  type_metric.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  image_magick_q16_hdri.c
windows/: CMakeLists.txt
